# Savory-Stories

backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: database.py  dependencies.py  main.py  models.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 20d926ace3e0_add_user_table.py  39b7d4610516_added_username_colum_in_user_table.py  cf0fe2f5a0a6_added_user_table.py
backend/app/api/: auth.py  deps.py  main.py  user.py
backend/app/api/routes/: auth.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: auth.py  user.py
backend/scripts/: format.sh
fronted/: .gitignore  biome.json  bun.lockb  openapi-ts.config.ts  package.json  rsbuild.config.ts  tailwind.config.js
fronted/src/: App.tsx  global.css  index.tsx  routeTree.gen.ts
fronted/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
fronted/src/components/: Footer.tsx  Header.tsx  Navigation.tsx
fronted/src/components/ui/: input.tsx
fronted/src/hooks/: useAuth.ts
fronted/src/routes/: __root.tsx  index.lazy.tsx
fronted/src/routes/auth/: login.tsx  signup.tsx
frontend/: bun.lockb  components.json  modify-openapi.js  modify-openapi.ts  openapi-ts.config.ts  openapi.json  package.json  rsbuild.config.ts  tailwind.config.ts
frontend/src/: index.tsx  main.css  routeTree.gen.ts
frontend/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/src/hooks/: useAuth.ts  useCustomToast.ts
frontend/src/lib/: utils.ts
frontend/src/routes/: App.tsx  __root.tsx  index.lazy.tsx
(+21 files in other folders)
